--- a/app/src/main/res/layout/item_market.xml
+++ b/app/src/main/res/layout/item_market.xml
@@ -22,19 +22,6 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/backgrounds/scenic" />
 
-        <ImageButton
-            android:id="@+id/btnDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="@drawable/background_circle_white"
-            android:elevation="4dp"
-            android:padding="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_delete"
-            app:tint="?attr/colorError" />
-
         <TextView
             android:id="@+id/tvTitle"
             android:layout_width="0dp"
@@ -81,15 +68,18 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnAddToCart"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="0dp"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:text="Add to Cart"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             app:icon="@drawable/ic_add_shopping_cart"
+            app:iconSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/tvDistance" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
